Bug 228006 - editing groups terribly slow
Summary: editing groups terribly slow
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-22 08:14 UTC by Martin Tlustos
Modified: 2010-04-19 12:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Tlustos 2010-02-22 08:14:12 UTC
Version:           4.4 (using 4.4.00 (KDE 4.4.0), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.31-20-generic

I want to add and edit a user group, but it takes ages to add an entry (about half a minute), cpu load is at about 80% (akonadi_contacts_resource), and I have to add about 130 more...
My contacts list is rather big, though - over 1200 entries...
My system is Kubuntu 9.10 with Backports enabled and KDE 4.4.0 installed.
Comment 1 Tobias Koenig 2010-02-22 12:18:19 UTC
Hej Martin,

is your setup conforming the recommended KDE standards?
That means:
  - Is Nepomuk enabled
  - Does Nepomuk use the virtuoso backend (can be found out by typing 'akonadictl status' on the command line)

What exactly is slow? The opening of the group editor dialog? Or when you
start to type in some contact names? Or the autocompletion of the names?

Ciao,
Tobias
Comment 2 Martin Tlustos 2010-02-22 15:51:57 UTC
Nepomuk is running, virtuoso is the backend (actually it's eating up about 70% of my cpu right now...)
When typing in a name it takes too long for the drop-down box to open and display the name list, kaddressbook thread takes about 80% of cpu, after about 5 seconds the first letter appears, then slowly the second etc. When searching the address list for matching entries is finished, cpu goes down again. Autocompletion is o.k. as far as I can see...
Cheers,
Martin
Comment 3 Tobias Koenig 2010-04-19 12:50:08 UTC
SVN commit 1116385 by tokoe:

Use InvisibleFetch strategy of ETM to improve performance on
lookup dramatically

BUG: 228006


 M  +2 -6      contactcompletionmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1116385