Use InvisibleFetch strategy of ETM to improve performance on lookup dramatically

BUG: 228006

svn path=/trunk/KDE/kdepimlibs/; revision=1116385